avatars on show page and reviews

--- a/app/assets/stylesheets/listings/_show.scss
+++ b/app/assets/stylesheets/listings/_show.scss
@@ -67,3 +67,13 @@
 #new_review {
   padding-bottom: 20px;
 }
+
+.user-corner {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+}
+
+.review-user {
+  display: inline;
+}
