--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -66,8 +66,14 @@
                 <% end %>
               </div>
               <% end %>
-
             </div>
+
+              <!-- Avatar -->
+              <div>
+               <%= cl_image_tag listing.photo, class: "avatar" %>
+              </div>
+
+
             <p><%= listing.category %></p>
             <p><%= listing.address %></p>
             <p><em>Extra option</em></p>
