added photo preview for uploading

--- a/app/assets/stylesheets/listings/_index.scss
+++ b/app/assets/stylesheets/listings/_index.scss
@@ -29,3 +29,22 @@
   top: 0;
   width: 100%;
 }
+
+.upload-photo {
+  margin-top: 32px;
+  border: 1px solid #d3d3d3;
+  padding: 8px 16px;
+  cursor: pointer;
+  font-weight: 500;
+  background: white;
+  border-radius: 2px;
+}
+
+.upload-photo-user {
+  border: 1px solid #d3d3d3;
+  padding: 8px 16px;
+  cursor: pointer;
+  font-weight: 500;
+  background: white;
+  border-radius: 2px;
+}
