--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for :search, url: listings_path, method: "GET" do |f| %>
-<div class="d-flex justify-content-center align-items-center bg-light p-0 rounded" style="height: 5rem;width: 24rem">
+<div class="d-flex justify-content-center align-items-center p-0" style="height: 5rem;width: 24rem">
   <div class="form-group mt-4 mr-4">
     <%= f.input :address, placeholder: 'Address', label: false, class: "border" %>
   </div>
