--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-dark navbar-lewagon">
   <%= link_to "/", class: "navbar-brand" do %>
-    <h3 class="mb-0", style="font-size: 24px">Siesta <i class="fas fa-couch" style="font-size: 20px"></i> Fiesta</h3>
+    <h3 class="mb-0", style="font-size: 24px"><font color="#9a1619">Siesta</font> <img src="https://image.flaticon.com/icons/png/512/235/235814.png" alt="logo"></i> Fiesta</h3>
     <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
