--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
-  background: #4f4f4f;
+  background: rgba(0,0,0,0.5);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 110px;
   padding: 0px 50px;
   color: #f7f7f7;
   flex-shrink: 0;
@@ -14,14 +14,18 @@
 }
 .footer-links a {
   color: #f7f7f7;
-  opacity: 0.15;
+  opacity: 0.25;
   text-decoration: none;
-  font-size: 24px;
-  padding: 0px 10px;
+  font-size: 28px;
+  padding: 0px 12px;
 }
 .footer-links a:hover {
   opacity: 1;
 }
 .footer .fa-heart {
   color: #D23333;
+}
+
+.footer-copyright {
+  opacity: .25;
 }
