--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,11 +1,14 @@
 // Import Google fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url('https://fonts.googleapis.com/css?family=Alata|Lato|Montserrat|Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Josefin+Sans|Kalam|Pathway+Gothic+One&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
+// $body-font: "Open Sans", "Helvetica", "sans-serif";
+$body-font: "Poppins", "Helvetica", "sans-serif";
 $headers-font: "Raleway", "Helvetica", "sans-serif";
-$card-headers-font: 'Montserrat', 'sans-serif';
+$card-headers-font: 'Montserrat', "Helvetica", 'sans-serif';
+$price-font: 'Kalam', "Helvetica";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
