--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,6 +14,7 @@ $gold: #EBAD25;
 $sepia: #b2913c;
 $turq: #00554F;
 // $background-color: #003a35;
-$background-color: #011916;
+// $background-color: #011916;
+$background-color: #011110;
 
 $maroon: #760A15;
