--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,15 +1,17 @@
 .banner {
   background-size: cover;
   background-position: top 40% center;
-  padding: 220px 0;
+  padding: 230px 0;
   margin-bottom: 24px;
 
   h1 {
     margin: 0;
-    color: white;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    font-size: 32px;
+    font-size: 36px;
     font-weight: bold;
+    color: rgba(255,255,255,0.8);
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    text-shadow: 1px 2px 10px rgba(0,0,0,0.8);
   }
 
   p {
@@ -18,4 +20,11 @@
     opacity: .7;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
+}
+
+#bannerImage {
+  background-image:
+    linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.3)),
+    url('https://images.unsplash.com/photo-1540991310315-65c19abac6b3?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80');
+  transition: 4s;
 }
