--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: rgba(0,0,0,0.2);
+  // background: rgba(0,0,0,0.5);
+  background:
+      linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,0.25), rgba(0,0,0,0.6));
   height: 70px;
 }
 
@@ -14,4 +16,8 @@
 
 .navbar-brand h3 {
   color: #037d88;
+}
+
+.logo {
+  text-shadow: 1px 2px 10px rgba(0,0,0,0.9);
 }
