--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -1,10 +1,6 @@
 <%= simple_form_for :search, url: listings_path, method: "GET" do |f| %>
-<div class="d-flex justify-content-center align-items-center p-0" style="height: 5rem;width: 24rem">
-  <div class="form-group mt-4 mr-4">
-    <%= f.input :address, placeholder: 'Address', label: false, class: "border" %>
-  </div>
-  <div class="form-group mt-1">
-    <%= f.submit "Search for Nap", class: "btn btn-secondary" %>
-  </div>
+<div class="search-form">
+    <%= f.input :address, placeholder: 'Address', label: false %>
+    <%= f.submit "Search for nap", class: "btn btn-secondary" %>
 </div>
 <% end %>
