--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<div id="bannerImage" class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1540991825428-5b54b09f7338?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2994&q=80);">
+<div id='bannerImage' class="banner">
   <div class="container">
-    <h1 class="d-flex justify-content-around mb-3">Take a nap at</h1>
+    <h1 class="d-flex justify-content-around mb-3">Take a nap at...</h1>
     <h3 class="d-flex justify-content-around mb-5"><%= render "form", listing: @new_listing %></h3>
   </div>
 </div>
@@ -20,7 +20,7 @@
     <% end %>
   </div>
 
-  <h1 class="m-3 border-bottom"></h1>
+  <h1 class="m-3"></h1>
   <div class="row w-100">
     <% @listings.each do |listing| %>
     <div class="col-lg-3 col-md-4 col-sm-6">
