--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<div class="navbar navbar-expand-sm navbar-dark navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-dark navbar-lewagon fixed-top">
   <%= link_to "/", class: "navbar-brand" do %>
-    <h3 class="mb-0", style="font-size: 24px"><font color="#9a1619">Siesta</font> <img src="https://image.flaticon.com/icons/png/512/235/235814.png" alt="logo"></i> Fiesta</h3>
+    <h3 class="mb-0 logo", style="font-size: 24px">Siesta <img src="https://image.flaticon.com/icons/png/512/235/235814.png" alt="logo"></i> <font color="#9a1619">Fiesta</font></h3>
     <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
