--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -16,7 +16,8 @@
     </div>
   </div>
   <div class="row">
-    <%= f.submit "New Listing", class: "btn btn-primary ml-3" %>
+    <%= f.submit "New Listing", class: "btn btn-primary ml-3", id:"new-listing-button", style: "position: absolute; top: -1000px;" %>
     <% end %>
+  <button id="new-listing-alert" class="btn btn-primary btn-block", id="new-listing-alert">Request Booking!</button>
   </div>
 </div>
