--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -5,7 +5,6 @@
   height: 420px;
   width: 17rem;
   margin: 0.5rem !important;
-  // background: rgba(255, 255, 255, 0.07);
   background:
       linear-gradient(to top, rgba(0,0,0,0), rgba(255, 255, 255, 0.07), rgba(255, 255, 255, 0.07));
   display: -webkit-box;
@@ -18,7 +17,6 @@
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 10px;
-  // box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
   a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.8);
@@ -27,12 +25,8 @@
       text-decoration: none;
       }
   }
-  .price {
-    font-family: $price-font;
-    font-size: 30px;
-    color: $sepia;
-  }
 }
+
 
 .home-card-img {
   position: relative;
@@ -98,7 +92,8 @@
 .card-product {
   overflow: hidden;
   height: 170px;
-  background: white;
+  background:
+      linear-gradient(to left, rgba(0,0,0,0), rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.07));
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 16px;
   display: flex;
@@ -109,12 +104,15 @@
 }
 
 .card-product h2 {
+  color: $sepia;
   font-size: 16px;
   font-weight: bold;
   margin: 0;
+
 }
 
-.card-product p {
+.card-product p:not(.price) {
+  color: white;
   font-size: 12px;
   line-height: 1.4;
   opacity: .7;
@@ -136,6 +134,16 @@
   // position: relative;
 }
 
+.listing-addons {
+  display: flex;
+  align-items: left;
+  padding: 12px 12px 0;
+  img {
+    width: 30px;
+    padding-right: 6px;
+  }
+}
+
 .img-layout {
   width: 100%;
 }
@@ -147,4 +155,13 @@
     color: $hover;
     text-decoration: none;
     }
+}
+
+.price {
+  font-family: $price-font;
+  font-size: 28px;
+  color: $sepia;
+  opacity: .85;
+  margin-bottom: 0;
+  margin-left: 8px;
 }
