--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -18,6 +18,6 @@
   <div class="row">
     <%= f.submit "New Listing", class: "btn btn-primary ml-3", id:"new-listing-button", style: "position: absolute; top: -1000px;" %>
     <% end %>
-  <button id="new-listing-alert" class="btn btn-primary btn-block", id="new-listing-alert">Request Booking!</button>
+  <button id="new-listing-alert" class="btn btn-primary btn-block", id="new-listing-alert">Make listing!</button>
   </div>
 </div>
