--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,42 +1,42 @@
 <div class="navbar navbar-expand-sm navbar-dark navbar-lewagon fixed-top">
   <%= link_to "/", class: "navbar-brand" do %>
-    <h3 class="mb-0 logo", style="font-size: 24px">Siesta <img src="https://image.flaticon.com/icons/png/512/235/235814.png" alt="logo"></i> <font color="#9a1619">Fiesta</font></h3>
-    <% end %>
+  <h3 class="mb-0 logo", style="font-size: 24px">Siesta <img src="https://image.flaticon.com/icons/png/512/235/235814.png" alt="logo"></i> <font color="#9a1619">Fiesta</font></h3>
+  <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
+  <% pending_notification = "Pen" %>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
-        <li class="nav-item active">
-          <%= link_to "Home", "/", class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
-        </li>
-        <li class="nav-item dropdown">
-          <% if current_user.photo.url %>
-          <%= cl_image_tag current_user.photo, class: "avatar dropdown-toggle", style:"cursor: hand; cursor: pointer;", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <% else %>
-          <%= image_tag User::DEFAULT_PICTURE , class: "avatar dropdown-toggle", style:"cursor: hand; cursor: pointer;", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <% end %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "My Account", account_bookings_path, class: "dropdown-item" %>
-            <%= link_to "Edit Account", account_edit_path, class: "dropdown-item" %>
-            <%= link_to "Pending Bookings",  pending_account_bookings_path, class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
-        </li>
+      <li class="nav-item active">
+        <%= link_to "Notifications (#{current_user.offers.where(booked: false).count})",  pending_account_bookings_path, class: "nav-link" %>
+
+      </li>
+      <li class="nav-item">
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+      </li>
+      <li class="nav-item dropdown">
+        <% if current_user.photo.url %>
+        <%= cl_image_tag current_user.photo, class: "avatar dropdown-toggle", style:"cursor: hand; cursor: pointer;", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% else %>
+        <%= image_tag User::DEFAULT_PICTURE , class: "avatar dropdown-toggle", style:"cursor: hand; cursor: pointer;", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <% end %>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <%= link_to "My Account", account_bookings_path, class: "dropdown-item" %>
+          <%= link_to "Edit Account", account_edit_path, class: "dropdown-item" %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+        </div>
+      </li>
       <% else %>
-        <li class="nav-item">
-          <%= link_to "Sign up",  new_user_registration_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
-        </li>
+      <li class="nav-item">
+        <%= link_to "Sign up",  new_user_registration_path, class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+      </li>
       <% end %>
     </ul>
   </div>
