--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to new_listing_path, class: "nav-link" do%>
+        <h6 style="color: white" class="mt-1"><i class="fas fa-plus"></i></h6>
+        <% end %>
+      </li>
       <li class="nav-item active">
         <%= link_to "Notifications (#{current_user.offers.where(booked: false).count})",  pending_account_bookings_path, class: "nav-link" %>
 
