changed background colors on show page

--- a/app/assets/stylesheets/listings/_show.scss
+++ b/app/assets/stylesheets/listings/_show.scss
@@ -27,7 +27,7 @@
 }
 
 .listing-wrapper {
-  background: white;
+  background: #011110;
   box-shadow: 2px 2px 15px rgba(0,0,0,0.1);
   margin: 0;
   padding: 0;
@@ -60,7 +60,7 @@
 }
 
 .map-row {
-  background: #f7f7f7;
+  background: #011110;
   margin: 0;
 }
 
