--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -63,16 +63,16 @@
         <div class="col-4 addons">
           <h4>Add-ons:</h4>
           <div>
-            <img src="https://cdn2.iconfinder.com/data/icons/food-drink-10/24/food-drink-36-512.png" alt="meal"> meal
+            <img src="https://cdn2.iconfinder.com/data/icons/food-drink-10/24/food-drink-36-512.png" alt="meal" style="filter: invert(1);"> meal
           </div>
           <div>
-            <img src="https://cdn2.iconfinder.com/data/icons/doing-housework-part-1/64/house-03-512.png" alt="pillow"> pillow
+            <img src="https://cdn2.iconfinder.com/data/icons/doing-housework-part-1/64/house-03-512.png" alt="pillow" style="filter: invert(1);"> pillow
           </div>
           <div>
-            <img src="https://cdn3.iconfinder.com/data/icons/solid-locations-icon-set/64/Massage_therapist_2-512.png" alt=""> massage
+            <img src="https://cdn3.iconfinder.com/data/icons/solid-locations-icon-set/64/Massage_therapist_2-512.png" alt="" style="filter: invert(1);"> massage
           </div>
           <div>
-            <img src="https://image.flaticon.com/icons/svg/2064/2064847.svg" alt=""> puppy
+            <img src="https://image.flaticon.com/icons/svg/2064/2064847.svg" alt="" style="filter: invert(1);"> puppy
           </div>
         </div>
         <div class="col-8 map-show">
