--- a/app/assets/stylesheets/listings/_index.scss
+++ b/app/assets/stylesheets/listings/_index.scss
@@ -32,6 +32,7 @@
 }
 
 .upload-photo {
+  color: black;
   margin-top: 32px;
   border: 1px solid #d3d3d3;
   padding: 8px 16px;
@@ -48,4 +49,8 @@
   font-weight: 500;
   background: white;
   border-radius: 2px;
+}
+
+#photo-preview {
+  border-radius: 50%;
 }
