ordered front page by reviews

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,6 +21,7 @@
   </div>
 
   <h1 class="m-3"></h1>
+    <h2 class="d-flex justify-content-around mb-1">Top naps near you:</h2>
   <div class="row w-100">
     <% @listings.each do |listing| %>
     <div class="col-lg-3 col-md-4 col-sm-6">
